manifests/keepout/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: keepout
  namespace: keepout
spec:
  selector:
    app: keepout
  ports:
    - name: http
      port: 80
      targetPort: http
