manifests/keepout/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keepout
  namespace: keepout
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls.certresolver: letsencrypt
spec:
  ingressClassName: traefik
  rules:
    - host: keepout.jmly.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: keepout
                port:
                  name: http
